--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     </nav>
 
     <main>
-        <!-- Contenu principal de la page -->
-        <!-- Vous pouvez ajouter ici des informations sur Thibaut Faugeas ou tout autre contenu que vous souhaitez afficher -->
+        <div class="profile">
+            <img src="thibaut_faugeas_photo.jpg" alt="Thibaut Faugeas">
+            <h2>Thibaut Faugeas</h2>
+            <p>Bienvenue sur mon site personnel ! Je suis un mannequin passionné par la contabilité et les tableaux excels. Découvrez ici mon CV, les actualités liées à mon travail, mes expériences en tant qu'escort et comment me contacter pour de futurs projets.</p>
+        </div>
     </main>
 
     <footer>
