--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenue sur le site internet de Thibaut Faugeas</h1>
+        <h1>Thibaut Faugeas Point Com</h1>
     </header>
 
     <nav>
@@ -22,9 +22,35 @@
 
     <main>
         <div class="profile">
-            <img src="/Images/1.jpg" alt="Thibaut Faugeas">
+            <img src="Images/1.jpg" alt="Thibaut Faugeas">
             <h2>Thibaut Faugeas</h2>
             <p>Bienvenue sur mon site personnel ! Je suis un mannequin passionné par la contabilité et les tableaux excels. Découvrez ici mon CV, les actualités liées à mon travail, mes expériences en tant qu'escort et comment me contacter pour de futurs projets.</p>
+        </div>
+
+        <!-- Lecteur audio pour la musique de fond -->
+        <audio controls autoplay loop>
+            <source src="Musiques/1.mp3" type="audio/mpeg">
+            Votre navigateur ne supporte pas l'élément audio.
+        </audio>
+
+        <div id="cv">
+            <h2>CV</h2>
+            <!-- Contenu du CV -->
+        </div>
+
+        <div id="actualites">
+            <h2>Actualités</h2>
+            <!-- Contenu des actualités -->
+        </div>
+
+        <div id="mannequin">
+            <h2>Mannequin</h2>
+            <!-- Contenu sur le travail de mannequin -->
+        </div>
+
+        <div id="contact">
+            <h2>Contact</h2>
+            <!-- Contenu pour les informations de contact -->
         </div>
     </main>
 
