--- a/index.html
+++ b/index.html
@@ -36,6 +36,63 @@
         <div id="cv">
             <h2>CV</h2>
             <!-- Contenu du CV -->
+           <p> Profil professionnel :
+
+Humanitaire engagé dans des missions loufoques et spécialiste de l'assistance farfelue.
+
+Expérience professionnelle :
+
+Responsable administratif et financier
+Mission locale de Paris
+Janvier 2023 - Aujourd'hui (7 mois)
+Ville de Paris, Île-de-France, France
+
+Responsable du contrôle de gestion
+SOLIDARITÉS INTERNATIONAL
+Octobre 2019 - Décembre 2022 (3 ans 3 mois)
+Région de Paris, France
+
+Gestion d'une équipe de 6 contrôleurs de gestion supervisant les activités humanitaires de SOLIDARITÉS INTERNATIONAL dans 20 pays, développement des procédures et des outils financiers assurant un contrôle régulier du management financier des missions, pour un volume total d'activité de 115M EUR.
+Développement du budget annuel de l'organisation dans sa globalité, suivi des dépenses du siège et publication de reporting financier mensuel appuyant la prise de décision de l'équipe de direction.
+Supervision de la clôture annuelle des affectations analytiques de l'ensemble des coûts de l'organisation, en lien avec la clôture annuelle des comptes et la certification des états financiers.
+Participation active au sein de la Senior Management Team de SOLIDARITÉS INTERNATIONAL, définissant les orientations stratégiques de l'organisation.
+Directeur administratif et financier (intérim)
+Octobre 2021 - Mars 2022 (6 mois)
+Paris et périphérie
+
+Finance/Gestion/Comptabilité/Trésorerie (Intérim 6 mois)
+Danish Refugee Council / Dansk Flygtningehjælp
+3 ans 6 mois
+Liban
+
+Responsable des services support
+Avril 2017 - Juillet 2019 (2 ans 4 mois)
+Liban
+
+Le Responsable des services support est responsable de la gestion et de la coordination des départements Finances, Ressources Humaines, Administration, Chaîne d'approvisionnement, Code de conduite et Informatique du DRC au Liban, travaillant dans 5 bureaux, avec 270 employés, et pour un budget total de 16M USD en 2017 // 13M USD en 2018. En tant que membre de l'équipe de direction, le Responsable des services support collabore étroitement avec le bureau régional de DRC MENA à Amman et le siège de DRC à Copenhague.
+Responsable finance et ressources humaines
+Février 2016 - Mars 2017 (1 an 2 mois)
+Liban
+
+En 2016, le Danish Refugee Council au Liban employait 350 personnes travaillant sur 20 projets différents dans la vallée de la Bekaa, Akkar, Tripoli +5 et le sud du Liban. Avec un budget annuel de 22M USD, l'organisation apporte son aide aux réfugiés syriens et aux communautés hôtes libanaises ayant besoin de protection, d'abris, de moyens de subsistance et de soutien à la gouvernance.
+Première Urgence Internationale
+1 an 2 mois
+Coordinateur finance, RH et logistique
+Janvier 2016 - Janvier 2016 (1 mois)
+Jordanie
+
+Coordinateur administratif, ressources humaines, finances et logistique pour la mission PUI en Jordanie à Amman. Supervision de l'équipe de soutien pour la mise en œuvre de trois programmes éducatifs et de protection (AFD, CdC, OCHA) dans les communautés hôtes de Jordanie touchées par la crise syrienne (2,5M USD).
+Expériences farfelues :
+
+Études d'escort de renommée mondiale, spécialisé dans l'art de guider les clients vers des solutions humanitaires extravagantes.
+Créateur d'un OnlyFans exclusif où les fonds sont récoltés pour financer des projets humanitaires décalés et loufoques.
+Maîtrise de la jonglerie avec des tableaux Excel en langues étrangères, une compétence essentielle pour divertir les collègues lors de réunions ennuyeuses.
+Loisirs :
+
+Bénévolat déjanté : Participation à des missions humanitaires décalées et hilarantes pour semer le bonheur et la fantaisie partout.
+Cuisine expérimentale : Création de recettes farfelues qui mêlent les saveurs du monde entier pour enflammer les papilles et les zygomatiques.
+Exploration de mondes imaginaires : Voyage dans des contrées imaginaires où les licornes organisent des réunions secrètes avec les lutins.
+Improvisation théâtrale : Mise en scène d'improvisations complètement loufoques et hilarantes pour le plaisir du public.<p>
         </div>
 
         <div id="actualites">
