--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <h2>Thibaut Faugeas</h2>
             <p>Bienvenue sur mon site personnel ! Je suis un mannequin passionné par la contabilité et les tableaux excels. Découvrez ici mon CV, les actualités liées à mon travail, mes expériences en tant qu'escort et comment me contacter pour de futurs projets.</p>
         </div>
+    </main>
 
     <section id="about">
         <!-- Contenu à propos -->
@@ -47,7 +48,7 @@
     <footer>
         <div class="mp3-player">
             <!-- Lecteur MP3 discret et élégant -->
-            <audio controls>
+            <audio controls autoplay>
                 <source src="/Musiques/1.mp3" type="audio/mpeg">
                 Votre navigateur ne prend pas en charge l'audio HTML5.
             </audio>
