--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Thibaut Faugeas Point Com</h1>
+        <h1><a href="index.html">Thibaut Faugeas Point Com</a></h1>
     </header>
 
     <nav>
