--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
         <div class="profile">
-            <img src="Images/1.jpg" alt="Thibaut Faugeas">
+            <img src="Images/1.jpg" alt="Thibaut Faugeas" class="profile-image">
             <h2>Thibaut Faugeas</h2>
             <p>Bienvenue sur mon site personnel ! Je suis un mannequin passionné par la contabilité et les tableaux excels. Découvrez ici mon CV, les actualités liées à mon travail, mes expériences en tant qu'escort et comment me contacter pour de futurs projets.</p>
         </div>
