--- a/indexOld.html
+++ b/indexOld.html
@@ -13,7 +13,7 @@
 
     <nav>
         <ul>
-            <li><a href="#cv" onclick="showCV()">CV</a></li>
+            <li><a href="#cv">CV</a></li>
             <li><a href="#actualites">Actualités</a></li>
             <li><a href="#mannequin">Mannequin</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -40,7 +40,7 @@
         <!-- Contenu de contact -->
     </section>
 
-    <!-- CV intégré à la page (masqué par défaut) -->
+    <!-- CV intégré à la page -->
     <section id="cv">
         <!-- Insérez ici le contenu de votre CV -->
         <!-- CV intégré à la page -->
@@ -102,12 +102,5 @@
         </div>
         <p>&copy; 2023 Théâtre Farfelu - Thibeaut Feaugeas. Tous droits réservés.</p>
     </footer>
-
-    <script>
-        function showCV() {
-            var cvSection = document.getElementById("cv");
-            cvSection.style.display = "block";
-        }
-    </script>
 </body>
 </html>
