--- a/CV.html
+++ b/CV.html
@@ -53,18 +53,19 @@
             </div>
 
             <div class="farfelues">
-                <h2>Expériences farfelues :</h2>
-                <p class="small-text">Études d'escort de renommée mondiale, spécialisé dans l'art de guider les clients vers des solutions humanitaires extravagantes.<br>
-                Créateur d'un OnlyFans exclusif où les fonds sont récoltés pour financer des projets humanitaires décalés et loufoques.<br>
-                Maîtrise de la jonglerie avec des tableaux Excel en langues étrangères, une compétence essentielle pour divertir les collègues lors de réunions ennuyeuses.</p>
+                <h2>Expériences Personnelles :</h2>
+                <p class="small-text">Études d'escort de renommée mondiale, spécialisé dans l'art de guider les clients vers des solutions humanitaires sensuelles.<br>
+                Créateur d'un OnlyFans exclusif où les fonds sont récoltés pour financer des projets notemment pour offrir des sextoys aux pays en developpement.<br>
+                Maîtrise de la jonglerie avec des tableaux Excel en langues étrangères, une compétence essentielle pour divertir les collègues lors de réunions ennuyeuses.
+            Champion inter-régional de powerpoint incluant des memes bien sentis</p>
             </div>
 
             <div class="loisirs">
                 <h2>Loisirs :</h2>
-                <p class="small-text">Bénévolat déjanté : Participation à des missions humanitaires décalées et hilarantes pour semer le bonheur et la fantaisie partout.<br>
+                <p class="small-text">Bénévolat : Participation à des missions humanitaires  pour semer le bonheur et la fantaisie partout.<br>
                 Cuisine expérimentale : Création de recettes farfelues qui mêlent les saveurs du monde entier pour enflammer les papilles et les zygomatiques.<br>
                 Exploration de mondes imaginaires : Voyage dans des contrées imaginaires où les licornes organisent des réunions secrètes avec les lutins.<br>
-                Improvisation théâtrale : Mise en scène d'improvisations complètement loufoques et hilarantes pour le plaisir du public.</p>
+                Improvisation théâtrale : Mise en scène d'improvisations hilarantes pour le plaisir du public.</p>
             </div>
         </section>
     </main>
