--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thibaut Feaugas Point Com</title>
+    <title>Thibault Feaugas Point Com</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html">Thibaut Feaugas Point Com</a></h1>
+        <h1><a href="index.html">Thibault Feaugas Point Com</a></h1>
         <nav>
             <ul>
                 <li><a href="CV.html">CV</a></li>
@@ -23,7 +23,7 @@
         <!-- Contenu de la page d'accueil -->
         <div class="profile">
             <div class="profile-image"></div>
-            <h2 class="profile-title">Thibaut Faugeas</h2>
+            <h2 class="profile-title">Thibault Faugeas</h2>
             <p>Bienvenue sur mon site personnel ! Je suis un mannequin passionné par la contabilité et les tableaux excels. Découvrez ici mon CV, les actualités liées à mon travail, mes expériences en tant qu'escort et comment me contacter pour de futurs projets.</p>
         </div>
     </main>
@@ -36,7 +36,7 @@
                 Votre navigateur ne prend pas en charge l'audio HTML5.
             </audio>
         </div>
-        <p>&copy; 2023 Théâtre Farfelu - Thibeaut Feaugeas. Tous droits réservés.</p>
+        <p>&copy; 2023 Thibault Feaugeas © - Tous droits réservés.</p>
     </footer>
 </body>
 </html>
