--- a/Mannequin.html
+++ b/Mannequin.html
@@ -73,5 +73,6 @@ Merci.
         </div>
         <p>&copy; 2023 Théâtre Farfelu - Thibeaut Feaugeas. Tous droits réservés.</p>
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
