--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="profile">
             <div class="profile-image"></div>
             <h2 class="profile-title">Thibault Faugeas</h2>
-            <p>Bienvenue sur mon site personnel ! Je suis un mannequin passionné par la contabilité et les tableaux excels. Découvrez ici mon CV, les actualités liées à mon travail, mes expériences en tant qu'escort et comment me contacter pour de futurs projets.</p>
+            <p>Bienvenue sur mon site personnel ! Je suis un mannequin passionné par la comtabilité et les tableaux excels. Découvrez ici mon CV, les actualités liées à mon travail, mes expériences en tant qu'escort et comment me contacter pour de futurs projets.</p>
         </div>
     </main>
 
