--- a/CV.html
+++ b/CV.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - Thibaut Feaugas Point Com</title>
+    <title>CV - Thibault Feaugas Point Com</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html">Thibaut Feaugas Point Com</a></h1>
+        <h1><a href="index.html">Thibault Feaugas Point Com</a></h1>
         <nav>
             <ul>
                 <li><a href="CV.html">CV</a></li>
@@ -34,20 +34,23 @@
                 <ul>
                     <li>
                         <strong>Responsable administratif et financier</strong><br>
+                    </br></br>
                         <em>Mission locale de Paris</em><br>
                         Janvier 2023 - Aujourd'hui (7 mois)<br>
                         Ville de Paris, Île-de-France, France
                     </li>
+                </br></br>
                     <li>
                         <strong>Responsable du contrôle de gestion</strong><br>
                         <em>SOLIDARITÉS INTERNATIONAL</em><br>
+                    </br></br>
                         Octobre 2019 - Décembre 2022 (3 ans 3 mois)<br>
                         Région de Paris, France<br>
                         Gestion d'une équipe de 6 contrôleurs de gestion supervisant les activités humanitaires de SOLIDARITÉS INTERNATIONAL dans 20 pays, développement des procédures et des outils financiers assurant un contrôle régulier du management financier des missions, pour un volume total d'activité de 115M EUR.<br>
                         Développement du budget annuel de l'organisation dans sa globalité, suivi des dépenses du siège et publication de reporting financier mensuel appuyant la prise de décision de l'équipe de direction.<br>
                         Supervision de la clôture annuelle des affectations analytiques de l'ensemble des coûts de l'organisation, en lien avec la clôture annuelle des comptes et la certification des états financiers.<br>
                         Participation active au sein de la Senior Management Team de SOLIDARITÉS INTERNATIONAL, définissant les orientations stratégiques de l'organisation.
-                    </li>
+                    </li></br></br>
                     <!-- Ajouter le reste de l'expérience professionnelle ici -->
                 </ul>
             </div>
@@ -78,7 +81,7 @@
                 Votre navigateur ne prend pas en charge l'audio HTML5.
             </audio>
         </div>
-        <p>&copy; 2023 Théâtre Farfelu - Thibeaut Feaugeas. Tous droits réservés.</p>
+        <p>&copy; 2023 Thibault Feaugeas © - Tous droits réservés.</p>
     </footer>
 </body>
 </html>
