--- a/Mannequin.html
+++ b/Mannequin.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mannequin - Thibaut Feaugas Point Com</title>
+    <title>Mannequin - Thibault Feaugas Point Com</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html">Thibaut Feaugas Point Com</a></h1>
+        <h1><a href="index.html">Thibault Feaugas Point Com</a></h1>
         <nav>
             <ul>
                 <li><a href="CV.html">CV</a></li>
@@ -67,11 +67,11 @@ Merci.
         <div class="mp3-player">
             <!-- Lecteur MP3 discret et élégant -->
             <audio controls autoplay>
-                <source src="/Musiques/1.mp3" type="audio/mpeg">
+                <source src="/Musiques/2.mp3" type="audio/mpeg">
                 Votre navigateur ne prend pas en charge l'audio HTML5.
             </audio>
         </div>
-        <p>&copy; 2023 Théâtre Farfelu - Thibeaut Feaugeas. Tous droits réservés.</p>
+        <p>&copy; 2023 Thibault Feaugeas © - Tous droits réservés.</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
