--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="CV.html">CV</a></li>
                 <li><a href="Actualites.html">Actualités</a></li>
                 <li><a href="Mannequin.html">Mannequin</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="https://fr.linkedin.com/in/thibault-feaugas-5662b225">Contact</a></li>
             </ul>
         </nav>
     </header>
